    (and not via CVS) and added a pointer to debian/README.Debian-source.
  * Added /usr/share/bug/boinc-client/script which pastes boinc-client's
    init script configuration file (/etc/default/boinc-client) into bug
    reports because this might be helpful for debugging.
  * extra/bash/boinc_cmd: Added bash completion for boinc_cmd.
  * debian/rules: Don't ignore $(MAKE) distclean errors to make lintian happy.

  [ Steffen Moeller ]
  * Smallish changes to Debian READMEs and man pages.

  [ Debconf translations ]
  * Added Portuguese (pt.po) by Miguel Figueiredo <elmig@debianpt.org>.
    (closes: #428278)

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 22 Jun 2007 12:10:03 +0200

boinc (5.8.17-2) unstable; urgency=low

  [ Frank S. Thomas ]
  * debian/control:
    - Extended boinc-manager's long description.
    - Added libcurl4-openssl-dev to Build-Depends because the libcurl packages
      have bumped sonames. The B-D on libcurl3-openssl-dev remains as
      alternative dependency to ease backporting to etch.
      (closes: #424501, #425225)
  * Updated all BOINC URLs to point to their new location in the official
    BOINC wiki according to http://boinc.berkeley.edu/trac/wiki/FileList.
  * debian/boinc-dev.{install,links}: Install lib/common_defs.h header to fix
    a FTBFS of boinc-app-seti with boinc-dev/5.8.17-1. This was discovered by
    Lucas Nussbaum's archive rebuild. (closes: #422643)
  * debian/manpages/*.xml: Made <ulink> elements empty if their content was
    the same as the content of their url attribute.

  [ Steffen Moeller ]
  * debian/control: Extended boinc-client's long description.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sun, 20 May 2007 12:09:40 +0200

boinc (5.8.17-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - BOINC Manager:
      - Broadened "Options" dialog so that labels does not get truncated.
        (closes: #389840)