@@ -1,3 +1,2 @@
-clientgui/boincmgr              usr/bin
 debian/icons/boincmgr-*.xpm     usr/share/pixmaps
 debian/boinc-manager.desktop    usr/share/applications
